Added sass varible for 'standalone' option to show what the app would look like without actually having to run it

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -9,7 +9,13 @@
         <title>Dossier Web Prototype</title>
     </head>
     <body>
-        <h1>Dossier Web Prototype</h1>
+    
+        <div id="app_container">
+            <div id="app_mask_wrapper">
+                <h1>Dossier Web Prototype</h1>
+            </div>
+        </div>
+
         <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
